--- a/.project
+++ b/.project
@@ -10,8 +10,9 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
-	</buildSpec>
+	</buildSpec
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>edu.wpi.first.wpilib.plugins.core.nature.FRCProjectNature</nature>		
 	</natures>
 </projectDescription>
